force-app/main/default/objects/RW_Welcome_Call__c/RW_Welcome_Call__c.object-meta.xml
<CustomObject>
    <label>Welcome Call</label>
    <nameField>
        <displayFormat>WC-{0000}</displayFormat>
        <label>Welcome Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>