force-app/main/default/objects/RW_Welcome_Call__c/fields/Applicant2_PAN__c.field-meta.xml
<CustomField>
    <fullName>Applicant2_PAN__c</fullName>
    <label>Applicant2 PAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>