force-app/main/default/objects/RW_Welcome_Call__c/fields/Bank_Preference_2__c.field-meta.xml
<CustomField>
    <fullName>Bank_Preference_2__c</fullName>
    <label>Bank Preference 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Names</valueSetName>
    </valueSet>
</CustomField>