force-app/main/default/objects/RW_Welcome_Call__c/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <externalId>true</externalId>
    <label>Booking Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>