force-app/main/default/objects/RW_Welcome_Call__c/fields/Dhamaka_Offer_to_be_Sent__c.field-meta.xml
<CustomField>
    <fullName>Dhamaka_Offer_to_be_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dhamaka Offer to be Sent</label>
    <type>Checkbox</type>
</CustomField>