force-app/main/default/objects/RW_Welcome_Call__c/fields/Reason_for_Hold_Reject__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hold_Reject__c</fullName>
    <label>Reason for Hold/Reject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non contactable</fullName>
            </value>
            <value>
                <fullName>Cost sheet issue</fullName>
            </value>
            <value>
                <fullName>Sales Dispute</fullName>
            </value>
            <value>
                <fullName>Sanction issue</fullName>
            </value>
            <value>
                <fullName>Fund issue</fullName>
            </value>
            <value>
                <fullName>Payment related dispute</fullName>
            </value>
            <value>
                <fullName>Technical/ system issue</fullName>
            </value>
            <value>
                <fullName>Medical issue</fullName>
            </value>
            <value>
                <fullName>Unit transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>