force-app/main/default/objects/RW_Welcome_Call__c/fields/RM_contact_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_contact_Number__c</fullName>
    <label>RM contact Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>