force-app/main/default/objects/RW_Welcome_Call__c/fields/RM_email__c.field-meta.xml
<CustomField>
    <fullName>RM_email__c</fullName>
    <label>RM-email</label>
    <type>Email</type>
</CustomField>