force-app/main/default/objects/RW_Welcome_Call__c/fields/RM_work_hours__c.field-meta.xml
<CustomField>
    <fullName>RM_work_hours__c</fullName>
    <label>RM work hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>