force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>RW_Agreement_Value__c</fullName>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>