force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Applicant1_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant1_Mobile_No__c</fullName>
    <label>Applicant1 Mobile No</label>
    <type>Phone</type>
</CustomField>