force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Applicant1_Primary_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant1_Primary_Applicant_Name__c</fullName>
    <label>Primary Applicant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>