force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Applicant2_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant2_Email_Address__c</fullName>
    <label>Applicant2 Email Address</label>
    <type>Email</type>
</CustomField>