force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Applicant2_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant2_Name__c</fullName>
    <label>Applicant2 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>