force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Applicant2_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant2_Permanent_Address__c</fullName>
    <label>Applicant2 Permanent Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>