force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Banking_Preference_for_Loan__c.field-meta.xml
<CustomField>
    <fullName>RW_Banking_Preference_for_Loan__c</fullName>
    <label>Banking Preference for Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>