force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Booking__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Welcome Calls</relationshipLabel>
    <relationshipName>Welcome_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>