force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Carpet_Area_in_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>RW_Carpet_Area_in_Sq_ft__c</fullName>
    <label>Carpet Area (in Sq.ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>