force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Discrepancy_list_shared_via_email__c.field-meta.xml
<CustomField>
    <fullName>RW_Discrepancy_list_shared_via_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discrepancy list shared via email?</label>
    <type>Checkbox</type>
</CustomField>