force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Flat_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Flat_No__c</fullName>
    <label>Flat No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>