force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Floor__c.field-meta.xml
<CustomField>
    <fullName>RW_Floor__c</fullName>
    <label>Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>