force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Instrument_Name__c</fullName>
    <label>Instrument Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>