force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Is_welcome_Letter_sent__c.field-meta.xml
<CustomField>
    <fullName>RW_Is_welcome_Letter_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is welcome Letter sent?</label>
    <type>Checkbox</type>
</CustomField>