force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Mode_of_funding__c.field-meta.xml
<CustomField>
    <fullName>RW_Mode_of_funding__c</fullName>
    <label>Mode of funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Loan</fullName>
            </value>
            <value>
                <fullName>Self Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>