force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_No_of_Car_Parkings__c.field-meta.xml
<CustomField>
    <fullName>RW_No_of_Car_Parkings__c</fullName>
    <label>Total No. of Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>