force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>