force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Payment_Plan_Milestones_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Plan_Milestones_Details__c</fullName>
    <label>Payment Plan/Milestones Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>