force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Project__c.field-meta.xml
<CustomField>
    <fullName>RW_Project__c</fullName>
    <label>Project</label>
    <length>30</length>
    <type>Text</type>
</CustomField>