force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Receipt_Type__c</fullName>
    <label>Receipt Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>