force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_ReceiptListRemarks__c.field-meta.xml
<CustomField>
    <fullName>RW_ReceiptListRemarks__c</fullName>
    <label>ReceiptListRemarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>