force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Reinitiate_Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>RW_Reinitiate_Welcome_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinitiate Welcome Call</label>
    <type>Checkbox</type>
</CustomField>