force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Send_Welcome_Letter_to_RM__c.field-meta.xml
<CustomField>
    <fullName>RW_Send_Welcome_Letter_to_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Welcome Letter to RM</label>
    <type>Checkbox</type>
</CustomField>