force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Source_Of_Booking__c.field-meta.xml
<CustomField>
    <fullName>RW_Source_Of_Booking__c</fullName>
    <label>Source Of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Emp / Mgmt Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>