force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Tower__c.field-meta.xml
<CustomField>
    <fullName>RW_Tower__c</fullName>
    <label>Tower</label>
    <length>30</length>
    <type>Text</type>
</CustomField>