force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_View_Cost_Sheet__c.field-meta.xml
<CustomField>
    <fullName>RW_View_Cost_Sheet__c</fullName>
    <label>View Cost Sheet</label>
    <type>Url</type>
</CustomField>