force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Welcome_Call_Accepted_Days__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call_Accepted_Days__c</fullName>
    <formula>IF(TEXT(RW_Welcome_Call_Status__c) == &apos;Accept&apos;,RW_Welcome_Call_Accepted_date__c - RW_Booking__r.RW_Booking_Confirmed_Date__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Call Accepted Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>