force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Welcome_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check once welcome call is completed</description>
    <label>Welcome Call Completed?</label>
    <type>Checkbox</type>
</CustomField>