force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Welcome_Call_Rejected_date__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call_Rejected_date__c</fullName>
    <label>Welcome Call Rejected date</label>
    <type>Date</type>
</CustomField>