force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Welcome_Call_Rejected_Days__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call_Rejected_Days__c</fullName>
    <formula>IF(TEXT(RW_Welcome_Call_Status__c) == &apos;Reject&apos;, Today()- RW_Welcome_Call_Rejected_date__c,
IF( (RW_Welcome_Call_Rejected_date__c != null &amp;&amp; RW_Welcome_Call_Reinitiate_date__c != null), RW_Welcome_Call_Reinitiate_date__c - RW_Welcome_Call_Rejected_date__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Call Rejected Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>