force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Welcome_Call_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call_Remarks__c</fullName>
    <description>To Capture Remarks</description>
    <label>Welcome Call Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>