force-app/main/default/objects/RW_Welcome_Call__c/fields/RW_Welcome_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Welcome_Call_Status__c</fullName>
    <label>Welcome Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Reinitiate</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>