force-app/main/default/objects/RW_Welcome_Call__c/fields/Stamp_Duty_and_Registration_Total__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_and_Registration_Total__c</fullName>
    <formula>RW_Booking__r.Quotation__r.Stamp_Duty_D__c + 30000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stamp Duty and Registration Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>