force-app/main/default/objects/RW_Welcome_Call__c/fields/Welcome_Call_Pending__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Pending__c</fullName>
    <formula>IF(TEXT(RW_Welcome_Call_Status__c) == &apos;Reinitiate&apos;, TODAY() - RW_Welcome_Call_Reinitiate_date__c,  IF(TEXT(RW_Welcome_Call_Status__c) == &apos;Reject&apos;, TODAY() - RW_Welcome_Call_Rejected_date__c,  IF(TEXT(RW_Welcome_Call_Status__c) == &apos;Hold&apos;, TODAY() - RW_Welcome_Call_Hold_date__c,  IF(TEXT(RW_Welcome_Call_Status__c) == &apos;Due&apos;, Now() -  CreatedDate , 0) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Call Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>