force-app/main/default/objects/RW_Welcome_Call__c/fields/Welcome_Call_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Relationship_Manager__c</fullName>
    <formula>IF( ISBLANK(RM_Name__c), RW_Booking__r.Unit_No__r.Relationship_Manager__r.RM_Name__c,RM_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Call Relationship Manager</label>
    <type>Text</type>
</CustomField>