force-app/main/default/objects/RW_Welcome_Call__c/fields/Welcome_Call_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Sales_Manager__c</fullName>
    <formula>IF(  ISBLANK(RW_Booking__r.Sales_Manager__c), 
 TEXT(RW_Booking__r.Opportunity__r.RW_Sales_Associate__c),RW_Booking__r.Sales_Manager__r.FirstName+ &apos; &apos; +RW_Booking__r.Sales_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Call Sales Manager</label>
    <type>Text</type>
</CustomField>