force-app/main/default/objects/RW_Welcome_Call__c/validationRules/Bank_preference.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_preference</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(RW_Mode_of_funding__c, &apos;Bank Loan&apos;),
  RW_Banking_Preference_for_Loan__c == null
)</errorConditionFormula>
    <errorMessage>Please select the  Bank preference 1</errorMessage>
</ValidationRule>